--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="bookmarks of your favorite websites">
+    <meta name="description" content="Thinkful Bookmark Project">
     <link rel="stylesheet" href="styles.css">
-    <title>Bookmarks</title>
+    <title>Bookmark App</title>
 </head>
 <body>
     <header role="banner" class="title">
@@ -16,12 +16,12 @@
         <p class="error-message"></p>
         <section class="filter" aria-live="polite">
             <select name="Filter by Minimum Rating" id="minimum-rating-select">
-                <option value="0">Min. Rating (Filter by):</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
+                <option value="0">Min. Star Rating (Filter by):</option>
+                <option value="1">1 Stars</option>
+                <option value="2">2 Stars</option>
+                <option value="3">3 Stars</option>
+                <option value="4">4 Stars</option>
+                <option value="5">5 Stars</option>
             </select>
         </section>
         <section class="add-form" aria-live="polite">
